--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Da ist die Website von heute</h1>
    <hr>
    <p>Eligella auf die 1</p>
-   <a href="https://heimspiele-scfreiburg.reservix.de/tickets-sc-freiburg-fc-augsburg-in-freiburg-im-breisgau-europa-park-stadion-am-1-10-2023/e2127835">Here we go</a>
+   <a href="https://www.youtube.com/watch?v=e0jN_5vzk30">Here we go</a>
    
    
    
